Feat: 댓글 삭제 기능 추가 pull operator 사용

--- a/public/view.html
+++ b/public/view.html
@@ -38,6 +38,7 @@
                         <td class="content"></td>
                         <td class="author"></td>
                         <td class="createAt"></td>
+                        <td class="comment_id" style="display: none;"></td>
                         <td class="deleteComment"><a onclick="deleteComment()" style="color:red; text-decoration: underline; cursor: pointer;">댓글 삭제</a></td>
                     </tr>
                 </template>
